# MalVaderBank

./: .gitignore  Base.h  CMakeLists.txt  Menu.c  Menu.h  MenuC.c  MenuC.h  MenuF.c  MenuF.h  Models.h  Program.c
Cliente/: MenuC.c  MenuC.h
DataBase/: Data.c  Data.h
Funcionario/: MenuF.c  MenuF.h
Model/: Models.h
